src/compiler/snapshots/isa__compiler__parser__tests__idents-13.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"aliass\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "aliass",
                        span: SpanData { file_id: 0, lo: 0, hi: 6 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 6 },
        ty: (),
    },
)
