src/compiler/snapshots/isa__compiler__parser__tests__idents-14.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"classes\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "classes",
                        span: SpanData { file_id: 0, start: 0, end: 7 },
                    },
                ],
                ..
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 7 },
        ty: (),
    },
)
