src/compiler/snapshots/isa__compiler__parser__tests__idents-15.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"_8instance\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "_8instance",
                        span: SpanData { file_id: 0, lo: 0, hi: 10 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 10 },
        ty: (),
    },
)
