src/compiler/snapshots/isa__compiler__parser__tests__idents-16.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"_01infix\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "_01infix",
                        span: SpanData { file_id: 0, lo: 0, hi: 8 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 8 },
        ty: (),
    },
)
