src/compiler/snapshots/isa__compiler__parser__tests__idents-17.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"_01infixl\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "_01infixl",
                        span: SpanData { file_id: 0, start: 0, end: 9 },
                    },
                ],
                ..
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 9 },
        ty: (),
    },
)
