src/compiler/snapshots/isa__compiler__parser__tests__idents-19.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"mengoprefix\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "mengoprefix",
                        span: SpanData { file_id: 0, start: 0, end: 11 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 11 },
        ty: (),
    },
)
