src/compiler/snapshots/isa__compiler__parser__tests__idents-20.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"amatch\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "amatch",
                        span: SpanData { file_id: 0, start: 0, end: 6 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 6 },
        ty: (),
    },
)
