src/compiler/snapshots/isa__compiler__parser__tests__idents-21.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"belse\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "belse",
                        span: SpanData { file_id: 0, lo: 0, hi: 5 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 5 },
        ty: (),
    },
)
