src/compiler/snapshots/isa__compiler__parser__tests__idents-22.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"cin\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "cin",
                        span: SpanData { file_id: 0, lo: 0, hi: 3 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 3 },
        ty: (),
    },
)
